tests/baselines/reference/differenceTypeNegative.errors.txt
tests/cases/conformance/types/rest/differenceTypeNegative.ts(3,17): error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
tests/cases/conformance/types/rest/differenceTypeNegative.ts(4,17): error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
tests/cases/conformance/types/rest/differenceTypeNegative.ts(5,17): error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
tests/cases/conformance/types/rest/differenceTypeNegative.ts(6,17): error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
tests/cases/conformance/types/rest/differenceTypeNegative.ts(8,21): error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
tests/cases/conformance/types/rest/differenceTypeNegative.ts(9,21): error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
tests/cases/conformance/types/rest/differenceTypeNegative.ts(10,21): error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
tests/cases/conformance/types/rest/differenceTypeNegative.ts(11,21): error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
tests/cases/conformance/types/rest/differenceTypeNegative.ts(12,21): error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.


==== tests/cases/conformance/types/rest/differenceTypeNegative.ts (9 errors) ====
    type Abc = { a; b; c }
    type Surprise = 'a' | 'b' | 12;
    let bad1: Abc - 12;
                    ~~
!!! error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
    let bad2: Abc - Surprise;
                    ~~~~~~~~
!!! error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
    let bad3: Abc - 'a' & 'b';
                    ~~~~~~~~~
!!! error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
    let bad4: Abc - number;
                    ~~~~~~
!!! error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
    function f<T, U extends 12, V extends Surprise, W extends 'a' & 'b', X extends number>(t: T) {
        let bad1: Abc - T;
                        ~
!!! error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
        let bad2: Abc - 12;
                        ~~
!!! error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
        let bad3: Abc - Surprise;
                        ~~~~~~~~
!!! error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
        let bad4: Abc - 'a' & 'b';
                        ~~~~~~~~~
!!! error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
        let bad5: Abc - number;
                        ~~~~~~
!!! error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
        return bad1;
    }
    